--- a/mvccoreSeguridadProovedor/Views/Shared/_Layout.cshtml
+++ b/mvccoreSeguridadProovedor/Views/Shared/_Layout.cshtml
@@ -27,7 +27,11 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <partial name="_PartialMenuUsuario"/>
+                <li class="nav-item ">
+                   <a asp-controller="Usuarios" asp-action="Index">Usuarios</a>
+                </li>
+               
+
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ejemplos</a>
